assets/css/old.css
/* ... */
.half-image-cards .card:hover .bg-img {
  filter: brightness(40%);
  -webkit-filter: brightness(40%);
  width: 8vw;
  border-radius: 7px 0px 0px 7px;
}

.half-image-cards .card:hover h2,
.half-image-cards .card:hover p {
  padding: 0.3rem 5vw 0.3rem 10vw;
  filter: none;
  opacity: 1;
}

.contact-cards {
  display: grid;
  grid-template-columns: repeat(auto-fill, 23rem);
  grid-gap: 1rem;
  justify-content: center;
  padding: 0;
}

.contact-cards li {
  border-radius: 7px;
  background-color: #ddd;
}


.contact-email .inputbox {
  outline: none;
  height: 3rem;
  width: 100%;
  display: block;
  background: #efefef;
  color: black;
  border: 0px solid #505050;
  border-radius: 5px;
  transition: 0.3s;
  margin-top: 0.5rem;
}

.contact-email :not(textarea) {
  text-align: center;
}

.contact-email .inputbox:hover {
  background: #dedede;
}

.contact-email .inputbox:focus {
  background: #cecece;
}

.contact-email button {
  width: 100%;
  height: 3rem;
  border-radius: 5px;
  text-align: center;
}

.contact-email .formbutton {
  background: #272727;
  color: #fff;
  border: 0px;
  transition-duration: 300ms;
  cursor: pointer;
}

.contact-email .formbutton:hover {
  background: #727272;
}

.contact-email .form {
  border-radius: 5px;
  align-items: center;
  justify-content: center;
  margin: auto;
  padding: 4rem 2.5rem;
  width: 65%;
  background: #fdfdfd;
  box-shadow: rgba(50, 50, 50, 0.1) 0px 4px 12px;
}

.contact-email .error_box {
  background: #fee;
  border-radius: 5px;
  margin: auto;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 1rem 1rem;
  margin-bottom: 1.5rem;
}

.contact-email .box {
  height: 2rem;
  width: 100%;
  text-align: center;
  border-radius: 5px;
  margin: auto;
  align-items: center;
  justify-content: center;
  padding: 0.5rem 0px;
  margin-bottom: 1rem;
}

textarea,
textfield {
  padding: 5px;
  font-size: 0.95rem;
}

.topic {
  padding: 1rem;
  font-size: 3rem;
  margin-top: 3vw;
  margin-bottom: 7vw;
}

.topic a {
  text-decoration: none;
  color: black;
  background-size: 0% 0.2em;
  background-image: linear-gradient(black, black);
  background-position-y: 104%;
  background-position-x: 0%;
  background-repeat: no-repeat;
  transition: 0.3s ease-in-out;
}

.topic a:hover {
  opacity: 70%;
  background-size: 100% 0.2em;
}

/* overall */
.icons {
  font-size: 2.25rem;
  font-weight: 500;
}

@font-face {
  font-family: "NerdFontsSymbols Nerd Font";
  src: url("/assets/fonts/nf-symbols.woff2") format("woff2");
}

.nf-icons {
  font-family: "NerdFontsSymbols Nerd Font";
}

/* Releases */
.release-track {
  background-size: cover;
  background-position: center;
  height: 100%;
  min-height: calc(100vh - 25rem);
  padding: 5vw 5vw;
  border-radius: 10px;
  border: 1px solid #ddd;
}

.release-track strong {
  color: #fff;
}

.release-track .text-box {
  max-width: 1250px;
  margin: 25% auto;
  background-color: rgba(0, 0, 0, 75);
  height: 100%;
  color: #ddd;
  padding: 2rem;
  border-radius: 7px;
  font-size: 1.2rem;
}

.release-track .text-box a {
  text-decoration: none;
  color: #fff;
  background-size: 0% 0.2em;
  background-image: linear-gradient(#ccc, #ccc);
  background-position-y: 104%;
  background-position-x: 0%;
  background-repeat: no-repeat;
  transition: 0.3s ease-in-out;
}

.release-track .text-box a:hover {
  color: #ccc;
  background-size: 100% 0.2em;
}

/* info */
.info {
  text-decoration: none;
  list-style-type: none;
  font-size: 1.4rem;
}

.info li {
  padding: 1rem;
}

.info a {
  text-decoration: none;
  color: #46f;
  background-size: 0% 0.2em;
  background-image: linear-gradient(#46f, #46f);
  background-position-y: 104%;
  background-position-x: 0%;
  background-repeat: no-repeat;
  transition: 0.3s ease-in-out;
}

.info a:hover {
  opacity: 70%;
  background-size: 100% 0.2em;
}

.info .title {
  font-size: 1.6rem;
}

.subdiv {
  padding: 1rem;
}

.long-br {
  display: block;
  height: 2rem;
}

@media screen and (width >=1180px) and (width<=1690px) {

  /*if(width<1620px&&width>=1125px)*/
  nav .dropdown .dropdown-social {
    position: relative;
    width: 17.5rem;
    padding: 0rem 0rem;
  }

  nav .dropdown .dropdown-social a {
    transition: 0.2s;
    display: flex;
    padding: 1rem;
    border-radius: 7px;
    margin: 0.3rem 0;
  }

  nav .dropdown .dropdown-social a:hover {
    background-color: #ddd;
  }

  nav .dropdown .dropdown-social strong {
    margin-left: auto;
    margin-right: auto;
    align-content: center;
  }

  nav .dropdown .dropdown-social p {
    margin: 0.5rem 0;
  }

  nav .dropdown .dropdown-menu {
    display: none;
  }

  nav .menu,
  nav .dropdown-open.dropdown,
  nav .dropdown-open.dropdown-social {
    opacity: 1;
    display: initial;
  }

  nav .social,
  nav .dropdown-open.dropdown-menu {
    opacity: 0;
    display: none;
  }

  nav .burger {
    display: block;
  }
}
/* ... */

